packages/typ/tests/fixtures/diagnostics/0051_core_not_int_05.ml.expected
File "0051_core_not_int_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0051_core_not_int_05 is not a valid module name.

File "0051_core_not_int_05.ml", line 2, characters 33-34:
2 | let _ = let shadow = true in not 0
                                     ^
Error: The constant 0 has type int but an expression was expected of type
         bool
